added xxl to bootstrap

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
-<footer class="d-flex flex-column justify-content-between mt-2 mt-xl-4">
-  <div class="footer-text align-self-center mb-xl-3">{{footerText}}</div>
+<footer class="d-flex flex-column justify-content-between mt-2 mt-xxl-4">
+  <div class="footer-text align-self-center mb-xxl-3">{{footerText}}</div>
 
   <audio #bgMusicRef id="bg-music">
     <source src="/assets/media/bg-music.mp3" type="audio/mpeg">
