--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="d-flex row no-gutters col-12 mb-xl-2 mt-xl-3">
+<header class="d-flex row no-gutters col-12 mb-xxl-2 mt-xxl-3">
   <div class="d-flex justify-content-around align-self-center social-links px-3 col-1">
 
     <a class="facebook-icon-wrapper" href="https://www.facebook.com/Bylennox-Creative-873958342667918/" target="_blank">
