--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -5,6 +5,23 @@ $contentFont: 'Arimo', sans-serif;
 $titleFont: 'Roboto', sans-serif;
 $logoFont: 'BankGothic Md BT', sans-serif;
 
+$grid-breakpoints: (
+  xs: 0,
+  sm: 576px,
+  md: 768px,
+  lg: 992px,
+  xl: 1200px,
+  xxl: 1900px,
+) !default;
+
+$container-max-widths: (
+  sm: 540px,
+  md: 720px,
+  lg: 960px,
+  xl: 1140px,
+  xxl: 1900px,
+) !default;
+
 @mixin respond-to($breakpoint) {
     @if $breakpoint == "xs" {
       @media (min-width: 0) {
