--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -17,6 +17,7 @@
     font-weight: 600;
     letter-spacing: 0.03rem;
     cursor: pointer;
+    z-index: 9;
 
     @include respond-to('xl2') {
         left: -1rem;
@@ -44,4 +45,8 @@
             height: 28px;
         }
     }
+}
+
+.music-on {
+    color: #ccc;
 }
