--- a/src/app/components/slider/slider.component.html
+++ b/src/app/components/slider/slider.component.html
@@ -1,4 +1,4 @@
-<div id="main-carosel" class="carousel slide carousel-fade" data-ride="carousel" (click)="setMusic(true)">
+<div #carousel class="carousel slide carousel-fade" (click)="setMusic(true)">
   <div class="carousel-inner">
       <div class="carousel-item {{index === 0 ? 'active' : ''}}" *ngFor="let key of imagesAmount | numbersLoop; let index = index">
           <img class="img-fluid" src="assets/images/{{key}}.jpg">
