--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="main-wrapper">
+<div class="container main-wrapper">
   <app-header></app-header>
   <app-slider></app-slider>
   <app-footer></app-footer>
