--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,11 +1,10 @@
 <footer class="d-flex flex-column justify-content-between mt-2 mt-xxl-4">
-  <div class="footer-text text-center align-self-center mb-xxl-3">{{footerText}}</div>
+  <div class="footer-text text-center align-self-center mb-xxl-3 {{isMusic ? 'd-none' : ''}}">{{footerText}}</div>
 
   <audio #bgMusicRef id="bg-music">
     <source src="/assets/media/bg-music.mp3" type="audio/mpeg">
   </audio>
-
-  <div class="music align-self-center {{isMusic ? '' : 'd-none'}}">
+  <div class="music align-self-center {{isMusic ? '' : 'opacity-0'}}">
 
     <div class="on {{isMusicOn ? 'd-none' : ''}}" (click)="isMusicOn = true; bgMusicRef.pause()">
       <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="37px" height="33px">
