--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="d-flex row no-gutters col-12 mb-xxl-2 mt-xxl-3">
+<header class="d-flex row no-gutters col-12 mb-2 mt-3">
   <div class="d-flex justify-content-around align-self-center social-links px-3 col-1">
 
     <a class="facebook-icon-wrapper" href="https://www.facebook.com/Bylennox-Creative-873958342667918/" target="_blank">
@@ -18,7 +18,7 @@
 
   <div class="logo-and-title col-11 no-gutters d-flex">
     <div class="title align-self-center col-xl-8 col-md-7">
-      <span class="{{isMusic ? 'music-on' : ''}}" (click)="setMusic(true)">{{titleText}}</span>
+      <span class="{{isMusic ? 'music-on' : ''}} disable-select" (click)="setMusic(true)">{{titleText}}</span>
     </div>
     <div class="text-uppercase col-xl-4 col-md-5 px-4 logo">
       <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 288.7 21.9"
