--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -9,6 +9,13 @@
     font-size: 42px;
     letter-spacing: -0.2rem;
   }
+
+  svg {
+    @include respond-to('xxl') {
+      width: 405px;
+      height: 31px;
+    }
+  }
 }
 
 .title {
@@ -51,5 +58,5 @@
 }
 
 .music-on {
-  color: #ccc;
+  opacity: .8;
 }
