--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -2,5 +2,34 @@
 @import '../../node_modules/bootstrap/scss/bootstrap';
 
 html {
-    direction: rtl;
+  direction: rtl;
 }
+
+::-webkit-scrollbar {
+    width: 2px;
+  }
+
+  ::-webkit-scrollbar-track {
+    -webkit-box-shadow: none;
+    background: #f1f1f1;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    -webkit-box-shadow: none;
+    background: #888;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
+
+  .disable-select {
+    -webkit-user-select: none;  
+    -moz-user-select: none;    
+    -ms-user-select: none;      
+    user-select: none;
+  }
+
+  .opacity-0 {
+    opacity: 0;
+  }
