--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -10,16 +10,16 @@ $grid-breakpoints: (
   sm: 576px,
   md: 768px,
   lg: 992px,
-  xl: 1200px,
-  xxl: 1800px,
+  xl: 21cm,
+  xxl: 21cm,
 ) !default;
 
 $container-max-widths: (
   sm: 540px,
   md: 720px,
   lg: 960px,
-  xl: 1140px,
-  xxl: 1800px,
+  xl: 21cm,
+  xxl: 21cm,
 ) !default;
 
 @mixin respond-to($breakpoint) {
