--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -18,7 +18,7 @@
 
   <div class="logo-and-title col-11 no-gutters d-flex">
     <div class="title align-self-center col-8">
-      <span class="{{isMusic ? 'music-on' : ''}} disable-select" (click)="setMusic(true)">{{titleText}}</span>
+      <span class="{{isMusic ? 'music-on' : ''}}" (click)="setMusic(true)">{{titleText}}</span>
     </div>
     <div class="text-uppercase col-4 px-4 logo">
       <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 288.7 21.9"
