--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="d-flex row no-gutters col-12 mb-2 mt-5">
+<header class="d-flex row no-gutters col-12 mb-2 pt-xl-5">
   <div class="d-flex justify-content-around align-self-center social-links px-xl-2 col-1">
 
     <a class="facebook-icon-wrapper" href="https://www.facebook.com/Bylennox-Creative-873958342667918/" target="_blank">
@@ -17,43 +17,11 @@
   </div>
 
   <div class="logo-and-title col-11 no-gutters d-flex">
-    <div class="title align-self-center col-8">
+    <div class="title align-self-center col-6 col-md-8 col-xl-9">
       <span class="{{isMusic ? 'music-on' : ''}}" (click)="setMusic(true)">{{titleText}}</span>
     </div>
-    <div class="text-uppercase col-4 px-4 logo">
-      <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 288.7 21.9"
-        style="enable-background:new 0 0 288.7 21.9;" xml:space="preserve">
-        <style type="text/css">
-          .st0 {
-            display: none;
-          }
-        </style>
-        <g id="Layer_1" class="st0">
-        </g>
-        <g id="_x3C_Layer_x3E_">
-          <g>
-            <path d="M2,3.8h2.9v13h11.9v2.3H2V3.8z" />
-            <path d="M20.2,3.8h15.4v2.3H23V10h7.5v2.3H23v4.6h12.6v2.2H20.2V3.8z" />
-            <path d="M42.7,9.6v9.5H40V3.8h2.2l11.2,10c0.7,0.6,1.3,1.3,1.8,2.1C55,14.9,55,14,55,13V3.8h2.7v15.3h-2L44.2,9
-			c-0.7-0.6-1.3-1.3-1.8-2.1C42.6,7.8,42.7,8.7,42.7,9.6z" />
-            <path d="M66.3,9.6v9.5h-2.7V3.8h2.2l11.2,10c0.7,0.6,1.3,1.3,1.8,2.1c-0.2-1-0.3-1.9-0.3-2.8V3.8h2.7v15.3h-2L67.9,9
-			c-0.7-0.6-1.3-1.3-1.8-2.1C66.2,7.8,66.3,8.7,66.3,9.6z" />
-            <path d="M90.6,3.8h11c2.9,0,3.7,0.9,3.7,3.6v8c0,2.8-0.9,3.6-3.7,3.6h-11c-2.9,0-3.7-0.8-3.7-3.6v-8C86.9,4.7,87.7,3.8,90.6,3.8z
-			 M102.5,16.8V6.1H89.8v10.7H102.5z" />
-            <path d="M116.3,11.3l-7.8-7.5h3.9l5.5,5.5l5-5.5h3.6l-7,7.1l8.6,8.2h-4l-6.2-6.2l-5.5,6.2h-3.7L116.3,11.3z" />
-            <path d="M146.2,6.1v10.7h10.7v-3.6l2.9,0.5v1.8c0,2.8-0.9,3.6-3.7,3.6h-9c-3,0-3.7-0.8-3.7-3.6v-8c0-2.8,0.8-3.6,3.7-3.6h9
-			c2.8,0,3.7,0.8,3.7,3.6v1.4l-2.9,0.5V6.1H146.2z" />
-            <path d="M164.7,3.8H177c2.2,0,3.2,0.8,3.2,3v3.4c0,2.1-1,2.9-3.2,2.9h-2l6.7,6h-3.9l-6.1-6h-4.2v6h-2.9V3.8z M167.6,6.1V11h8.1
-			c1.3,0,1.6-0.3,1.6-1.5V7.6c0-1.3-0.5-1.5-1.6-1.5H167.6z" />
-            <path d="M185.7,3.8h15.4v2.3h-12.5V10h7.5v2.3h-7.5v4.6h12.6v2.2h-15.5V3.8z" />
-            <path d="M211.9,3.8h2.6l9,15.3h-3.1l-2-3.6h-10.5l-1.9,3.6h-2.9L211.9,3.8z M217.2,13.3l-4.1-7.3l-4,7.3H217.2z" />
-            <path d="M232.4,19.1h-2.9v-13h-7.2V3.8h17.3v2.3h-7.2V19.1z" />
-            <path d="M242.8,19.1V3.9h2.9v15.2H242.8z" />
-            <path d="M248.8,3.8h3.1l6.8,12.3l6.6-12.3h2.8l-8.4,15.3h-2.2L248.8,3.8z" />
-            <path d="M271.4,3.8h15.4v2.3h-12.5V10h7.5v2.3h-7.5v4.6h12.6v2.2h-15.5V3.8z" />
-          </g>
-        </g>
-      </svg>
+    <div class="text-uppercase col-6 col-md-4 col-xl-3 px-2 logo">
+      {{logoText}}
     </div>
   </div>
 </header>
