--- a/src/app/features/slider/slider.component.html
+++ b/src/app/features/slider/slider.component.html
@@ -1,6 +1,6 @@
 <div #carousel class="carousel slide carousel-fade" (click)="setMusic(true)">
   <div class="carousel-inner">
-      <div class="carousel-item {{index === 0 ? 'active' : ''}}" *ngFor="let key of imagesAmount | numbersLoop; let index = index">
+      <div class="carousel-item {{index === 0 ? 'active' : ''}}" *ngFor="let key of keys; let index = index">
           <img class="img-fluid" src="assets/images/{{key}}.jpg">
       </div>
   </div>
